// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Events create can be created 1`] = `
{
  "data": {
    "createEvent": {
      "description": [
        {
          "children": [
            {
              "text": "Event Bio Heading",
            },
          ],
          "type": "heading-one",
        },
        {
          "children": [
            {
              "text": "event bio text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "endsAt": 2020-11-25T22:00:00.000Z,
      "id": Any<String>,
      "image": null,
      "location": "Foobar Street 5
  8015 Barfoo City",
      "name": "Test Event",
      "startsAt": 2020-11-25T20:00:00.000Z,
      "status": "SCHEDULED",
      "tags": ArrayContaining [
        ObjectContaining {
          "id": Any<String>,
          "tag": Any<String>,
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Events create can be created with bare minimum 1`] = `
{
  "data": {
    "createEvent": {
      "description": [],
      "endsAt": null,
      "id": Any<String>,
      "image": null,
      "location": null,
      "name": "Test Event",
      "startsAt": 2020-11-25T20:00:00.000Z,
      "status": "SCHEDULED",
      "tags": [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Events create can not be created with endsAt before startsAt 1`] = `
{
  "data": {
    "createEvent": null,
  },
  "errors": [
    [GraphQLError: endsAt can not be earlier than startsAt],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Events query private can query a list of events within a timeframe 1`] = `
[
  {
    "endsAt": null,
    "startsAt": 2050-06-19T00:00:00.000Z,
  },
  {
    "endsAt": 2050-06-19T00:00:00.000Z,
    "startsAt": 2036-10-10T00:00:00.000Z,
  },
  {
    "endsAt": 2036-10-10T00:00:00.000Z,
    "startsAt": 2009-05-25T00:00:00.000Z,
  },
]
`;

exports[`Events query public can query a list of events within a timeframe 1`] = `
[
  {
    "endsAt": null,
    "startsAt": 2050-06-19T00:00:00.000Z,
  },
  {
    "endsAt": 2050-06-19T00:00:00.000Z,
    "startsAt": 2036-10-10T00:00:00.000Z,
  },
  {
    "endsAt": 2036-10-10T00:00:00.000Z,
    "startsAt": 2009-05-25T00:00:00.000Z,
  },
]
`;

exports[`Events update can not be updated with endsAt before startsAt 1`] = `
{
  "data": {
    "updateEvent": null,
  },
  "errors": [
    [GraphQLError: endsAt can not be earlier than startsAt],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Events update can not be updated with endsAt before startsAt 2`] = `
{
  "data": {
    "updateEvent": null,
  },
  "errors": [
    [GraphQLError: endsAt can not be earlier than startsAt],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
